--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,28 @@
             android:layout_height="wrap_content"
             android:text="Edit" />
 
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rbLinear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="linear" />
+
+            <RadioButton
+                android:id="@+id/rbGrid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="grid" />
+
+        </RadioGroup>
+
         <Button
             android:id="@+id/btnDelete"
             android:layout_width="wrap_content"
@@ -34,6 +56,15 @@
         android:layout_above="@+id/etPos"
         android:layout_below="@id/topBar"
         android:scrollbars="vertical" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvGrid"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/etPos"
+        android:layout_below="@id/topBar"
+        android:scrollbars="vertical"
+        android:visibility="invisible" />
 
     <EditText
         android:id="@+id/etPos"
