--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -15,12 +15,19 @@
             android:layout_width="50dp"
             android:layout_height="match_parent" />
 
+        <ImageView
+            android:id="@+id/ivThumb"
+            android:background="#AAAAAA"
+            android:layout_width="50dp"
+            android:layout_margin="5dp"
+            android:layout_height="50dp" />
+
         <TextView
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:padding="20dp"
+            android:layout_marginLeft="20dp"
             android:textSize="17sp" />
     </LinearLayout>
 
